# FIREWALL

./: .gitignore  README.md  pyproject.toml  sentinel_redblue.py  sentinel_redblue_report.json  setup.py  setup_cython.py  test_live_learning.py  test_live_learning_mock.py  test_live_real.py  test_live_real2.py
sentinel_shield/: __init__.c  __init__.py  core.c  core.py  dynamic_rules.json  guard.py
